--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <div>Front end</div>
-    <script src="/build/bundle.js"></script>
+    <div id="container"></div>
   </body>
+  <script src="/build/bundle.js"></script>
 </html>
