Alter webpack backend; add authentication on frontend

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Flux</title>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
   </head>
   <body>
-    <div id="container"></div>
+    <div class="container"></div>
   </body>
   <script src="/build/bundle.js"></script>
 </html>
