--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Flux</title>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link rel="stylesheet" href="/style/normalize.css">
     <link rel="stylesheet" href="/style/style.css">
+
+    <link rel="stylesheet" href="/style/navbar/navbar_top.css">
+    <link rel="stylesheet" href="/style/navbar/navbar_bottom.css">
+    <link rel="stylesheet" href="/style/navbar/logo.css">
+    <link rel="stylesheet" href="/style/navbar/media_queries.css">
+
+    <link rel="stylesheet" href="/style/view_movies/view_movies.css">
+    <link rel="stylesheet" href="/style/movies/movies_id.css">
+
+    <link rel="stylesheet" href="/style/profile/profile.css">
+
+
+
   </head>
   <body>
-    <div class="container"></div>
+    <div class="app"></div>
+
   </body>
   <script src="/build/bundle.js"></script>
 </html>
