modify accordion to include views and likes

--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
     <link rel="stylesheet" href="/style/navbar/media_queries.css">
 
     <link rel="stylesheet" href="/style/view_movies/view_movies.css">
+    <link rel="stylesheet" href="/style/view_movies/accordion.css">
     <link rel="stylesheet" href="/style/movies/movies_id.css">
 
     <link rel="stylesheet" href="/style/profile/profile.css">
-
-
+    <link rel="stylesheet" href="/style/loading_cube.css">
 
   </head>
   <body>
