--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.3.2/css/simple-line-icons.css">
+
     <link rel="stylesheet" href="/style/normalize.css">
     <link rel="stylesheet" href="/style/style.css">
 
@@ -21,10 +24,24 @@
     <link rel="stylesheet" href="/style/profile/profile.css">
     <link rel="stylesheet" href="/style/loading_cube.css">
 
+    <link rel="stylesheet" href="/style/landing/landing.css">
+    <link rel="stylesheet" href="/style/landing/landing_section_1.css">
+    <link rel="stylesheet" href="/style/landing/landing_section_2.css">
+    <link rel="stylesheet" href="/style/landing/landing_section_3.css">
+    <link rel="stylesheet" href="/style/landing/landing_section_4.css">
+    <link rel="stylesheet" href="/style/landing/landing_section_5.css">
+    <link rel="stylesheet" href="/style/landing/landing_navbar.css">
+
+
   </head>
   <body>
     <div class="app"></div>
 
   </body>
   <script src="/build/bundle.js"></script>
+  <script src="https://use.fontawesome.com/cf45ec25e4.js"></script>
+  <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
+
+
+
 </html>
